# gtkrypt

./: .gitignore  CODE-REVIEW.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PROMPT.md  README.md  SCOPE-VAULT.md  SCOPE.md  meson.build  package-lock.json  package.json
crypto/: Cargo.toml
crypto/src/: decrypt.rs  encrypt.rs  header.rs  kdf.rs  main.rs  progress.rs
crypto/tests/: integration.rs
data/: io.github.gtkrypt.desktop  io.github.gtkrypt.metainfo.xml  io.github.gtkrypt.mime.xml  meson.build
docs/plans/: 2026-02-08-accessibility-labels-design.md  2026-02-08-accessibility-labels-implementation.md  2026-02-08-error-display-design.md  2026-02-08-error-display-implementation.md  2026-02-08-i18n-prep-design.md  2026-02-08-i18n-prep-implementation.md  2026-02-08-keyboard-navigation-design.md  2026-02-08-keyboard-navigation-implementation.md  2026-02-08-permissions-metadata-design.md  2026-02-08-permissions-metadata-implementation.md  2026-02-08-wipe-original-design.md  2026-02-08-wipe-original-implementation.md
src/: MainWindow.ts  index.ts
src/models/: categories.ts  errors.ts  templates.ts  types.ts
src/services/: clipboard.ts  crypto.ts  detect.ts  format.ts  io.ts  manifest.ts  naming.ts  search.ts  thumbnail.ts  vault.ts
src/ui/: categoryManager.ts  changePassphraseDialog.ts  exportDialog.ts  fileList.ts  imageViewer.ts  importDialog.ts  itemDetailView.ts  itemEditorDialog.ts  noteEditorDialog.ts  passphraseDialog.ts  progressView.ts  recordEditorDialog.ts  resultView.ts  settingsDialog.ts  textViewer.ts  vaultBrowser.ts  vaultCreateDialog.ts  vaultDeleteDialog.ts  vaultListView.ts  vaultUnlockDialog.ts  window.ts
src/util/: bytes.ts  i18n.ts  logging.ts  uuid.ts
tests/: esbuild.js  harness.ts  run.sh
tests/integration/: buffer-ops.test.sh  edge-cases.test.sh  roundtrip.test.sh  security.test.sh  vault-items.test.sh  vault-lifecycle.test.sh
(+8 files in other folders)
