[package]
name = "gtkrypt-crypto"
version = "0.1.0"
edition = "2021"
description = "AES-256-GCM encryption/decryption backend for gtkrypt"

[[bin]]
name = "gtkrypt-crypto"
path = "src/main.rs"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
sha2 = "0.10"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
